# ChangeLog for sys-devel/gcc-powerpc64
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc-powerpc64/ChangeLog,v 1.5 2006/06/06 01:24:31 eradicator Exp $

  06 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  gcc-powerpc64-3.4.4.ebuild:
  Updated DEPEND to accept eselect-compiler.

  28 Mar 2006; Markus Rothe <corsair@gentoo.org> gcc-powerpc64-3.4.4.ebuild:
  Bump to stable on ppc64; bug #126696

  28 Dec 2005; Joshua Kinard <kumba@gentoo.org> gcc-powerpc64-3.4.4.ebuild:
  Allow gcc-powerpc64 to detect whether it's in a glibc or uclibc userland,
  and modify its CHOST accordingly.

*gcc-powerpc64-3.4.4 (02 Jul 2005)

  02 Jul 2005; Daniel Ostrow <dostrow@gentoo.org> gcc-powerpc64-3.4.4.ebuild
  Initial import of an ebuild which builds a kernel compiler for powerpc64.
