@@ -1,0 +1,3 @@
+MD5 ad9f97a4d04982ccf4fd67cb464879f3 gcc-4.1.1.tar.bz2 39172003
+RMD160 0edeac242d900b075a7e36796380492b5b3c8564 gcc-4.1.1.tar.bz2 39172003
+SHA256 985cbb23a486570a8783395a42a8689218f5218a0ccdd6bec590eef341367bb7 gcc-4.1.1.tar.bz2 39172003
