@@ -1,6 +1,13 @@
 # ChangeLog for sys-devel/gcc-powerpc64
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc-powerpc64/ChangeLog,v 1.5 2006/06/06 01:24:31 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc-powerpc64/ChangeLog,v 1.6 2006/06/11 01:18:15 robbat2 Exp $
+
+*gcc-powerpc64-4.1.1 (11 Jun 2006)
+
+  11 Jun 2006; Robin H. Johnson <robbat2@gentoo.org>
+  +gcc-powerpc64-4.1.1.ebuild:
+  Bump for gcc-4.1.1 support. Also disables libssp/libmudflap/libgcj/nls that
+  would previously be built otherwise, and adds USE=altivec support.
 
   06 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
   gcc-powerpc64-3.4.4.ebuild:
